--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=ActividadesSemana01
+application.title=EjemploLecturaArchivos
 application.vendor=carlospalominovidal
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/ActividadesSemana01.jar
+dist.jar=${dist.dir}/EjemploLecturaArchivos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/ActividadesSemana01
+dist.jlink.output=${dist.jlink.dir}/EjemploLecturaArchivos
 endorsed.classpath=
 excludes=
 file.reference.hamcrest-core-1.3.jar=/Users/carlospalominovidal/Downloads/jar_files-2/hamcrest-core-1.3.jar
@@ -50,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=20
-javac.target=20
+javac.source=21
+javac.target=21
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -76,7 +76,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=ActividadesSemana01
+jlink.launcher.name=EjemploLecturaArchivos
 main.class=TallerProgramacion.Ejercicio01
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
